@@ -34,7 +34,7 @@ conditions for modified versions, except that this
 permission notice may be stated in a translation approved
 by the Free Software Foundation.
 -->
-<!-- Created on February, 13 2005 by texi2html @PACKAGE_VERSION@ -->
+<!-- Created on March, 29 2005 by texi2html 1.77 -->
 <!--
 Written by: Lionel Cons <Lionel.Cons@cern.ch> (original author)
             Karl Berry  <karl@freefriends.org>
@@ -51,7 +51,7 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <meta name="keywords" content="Texi2HTML - Texinfo to HTML v1.77: Texi2HTML">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
-<meta name="Generator" content="texi2html @PACKAGE_VERSION@">
+<meta name="Generator" content="texi2html 1.77">
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <style type="text/css">
 <!--
@@ -6199,7 +6199,7 @@ is added to <tt>`Makefile.am'</tt>.
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Patrice Dumas</em> on <em>February, 13 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>March, 29 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.77</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -6301,7 +6301,7 @@ is added to <tt>`Makefile.am'</tt>.
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Patrice Dumas</em> on <em>February, 13 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>March, 29 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.77</em></a>.
  </font>
  <br>
 
